[package]
name = "puma_os"
version = "0.1.0"
authors = ["Jamin M <jaminmenter@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33

[dependencies]
bootloader = "0.8.0"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.9.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"